--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Our Journey | Prestige World Wide</title>
+  <title>About | Prestige World Wide</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Follow the full journey of Prestige World Wide from 2013 until today." />
+  <meta name="description" content="Learn more about Prestige World Wide, a Lebanese sole partnership founded in 2013 with a history of multi-sector ventures." />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800&family=Inter:wght@300;400;500;600&display=swap">
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
@@ -16,8 +16,8 @@
       </div>
       <nav class="nav-links">
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="story.html" class="active">Our Journey</a>
+        <a href="about.html" class="active">About</a>
+        <a href="story.html">Our Journey</a>
         <a href="brands.html">Brands</a>
         <a href="contact.html">Contact</a>
       </nav>
@@ -25,93 +25,76 @@
   </header>
 
   <section class="section">
-    <div class="container">
-      <div class="section-kicker">Story</div>
-      <h1 class="section-title">The Journey of Prestige World Wide.</h1>
-      <p class="section-subtitle">
-        From a small gadget importer in 2013 to a multi-venture umbrella and then back to rebuilding from zero — 
-        this is the honest, unpolished story of Prestige World Wide.
-      </p>
+    <div class="container grid-2">
+      <div>
+        <div class="section-kicker">About Us</div>
+        <h1 class="section-title">Prestige World Wide in a Few Lines.</h1>
+        <p class="section-subtitle">
+          Prestige World Wide (PWW) is a Lebanese sole partnership (Mo2asaseh) registered in 2013. 
+          From day one, the mission has been simple: create and operate ventures that bring value, 
+          practicality, and a touch of creativity to everyday life.
+        </p>
+        <p style="margin-top: 1rem; font-size: 0.95rem; color: var(--text-muted);">
+          Over the years, PWW has moved across sectors — gadgets, cleaning services, shisha catering, 
+          and international e-commerce. Today, the company is entering a new phase, focused on digital-first brands 
+          and sustainable models that can adapt to changing markets.
+        </p>
+      </div>
 
-      <div class="timeline" style="margin-top: 2rem;">
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-year">2013</div>
-          <div class="timeline-title">Foundation · Prestige Gadgets</div>
-          <div class="timeline-text">
-            Prestige World Wide is officially registered as a sole partnership (Mo2asaseh) in Lebanon. 
-            The first business unit focuses on importing gadgets and mobile accessories and distributing them in retail and wholesale.
-          </div>
-        </div>
-
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-year">2015</div>
-          <div class="timeline-title">Expansion into Cleaning Services</div>
-          <div class="timeline-text">
-            PWW launches Prestige Cleaning, offering professional cleaning services for houses, apartments, and offices. 
-            A move from pure retail into service-based operations.
-          </div>
-        </div>
-
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-year">2016</div>
-          <div class="timeline-title">Prestige Shisha · Lifestyle Services</div>
-          <div class="timeline-text">
-            Seeing demand in events and hospitality, PWW introduces Prestige Shisha — a shisha catering concept for private gatherings and occasions.
-          </div>
-        </div>
-
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-year">2018</div>
-          <div class="timeline-title">Express Portal · Going International</div>
-          <div class="timeline-text">
-            PWW steps into cross-border e-commerce with Express Portal, an online store selling gadgets and clothes to international customers.
-          </div>
-        </div>
-
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-year">2020</div>
-          <div class="timeline-title">Pandemic & Economic Collapse</div>
-          <div class="timeline-text">
-            COVID-19, combined with Lebanon’s financial and banking crisis, hits all operations hard. 
-            Demand drops, liquidity becomes a serious challenge, and multiple projects are forced to shut down.
-          </div>
-        </div>
-
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-year">2021–2022</div>
-          <div class="timeline-title">Pause · Reflection Phase</div>
-          <div class="timeline-text">
-            Prestige World Wide enters a pause. Operations are minimal, and the focus shifts from growing to surviving and reassessing. 
-            These years become a strategic reset period.
-          </div>
-        </div>
-
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-year">2023–2025</div>
-          <div class="timeline-title">Rebirth · Dare 2 Wear</div>
-          <div class="timeline-text">
-            With a clearer mindset and lessons learned, PWW re-enters the market with a fresh digital brand: Dare 2 Wear, 
-            an apparel and streetwear concept built for online growth and bolder expression.
-          </div>
-        </div>
-
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-year">Next</div>
-          <div class="timeline-title">Future Ventures Under Prestige World Wide</div>
-          <div class="timeline-text">
-            The story is not finished. Prestige World Wide will continue to act as the umbrella under which new ideas, 
-            brands, and services are launched — one project at a time.
-          </div>
+      <div>
+        <div class="card">
+          <div class="card-meta">Identity</div>
+          <h3 class="card-title">What Defines Prestige World Wide</h3>
+          <p class="card-text">
+            • Legal form: Sole Partnership (Mo2asaseh)<br>
+            • Registered: 2013 · Lebanon<br>
+            • Core: Multi-project umbrella company<br>
+            • Current focus: Dare 2 Wear and upcoming digital ventures
+          </p>
         </div>
       </div>
+    </div>
+  </section>
+
+  <section class="section section-alt">
+    <div class="container grid-3">
+      <div>
+        <div class="section-kicker">Mission</div>
+        <h2 class="section-title">Why We Exist.</h2>
+        <p class="section-subtitle">
+          To build diversified ventures rooted in creativity, reliability, and resilience — even when the environment is uncertain.
+        </p>
+      </div>
+      <div>
+        <div class="section-kicker">Vision</div>
+        <h2 class="section-title">Where We’re Going.</h2>
+        <p class="section-subtitle">
+          To become a hub of modern brands and services, starting from Lebanon and expanding into regional and global markets.
+        </p>
+      </div>
+      <div>
+        <div class="section-kicker">Values</div>
+        <h2 class="section-title">How We Work.</h2>
+        <p class="section-subtitle">
+          Creativity. Reliability. Innovation. Resilience. Integrity.  
+          These are not buzzwords, they’re filters for decisions we make and projects we launch.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section">
+    <div class="container">
+      <div class="section-kicker">Approach</div>
+      <h2 class="section-title">What We Learned From a Tough Decade.</h2>
+      <p class="section-subtitle">
+        Operating in Lebanon through economic instability, banking collapse, and a global pandemic leaves you with two options: stop, or reinvent. Prestige World Wide chose the second option.
+      </p>
+      <p style="margin-top: 1rem; font-size: 0.95rem; color: var(--text-muted); max-width: 720px;">
+        The shutdown of earlier projects was not the end of the story. Instead, it pushed PWW to rethink how businesses are built, 
+        how risk is managed, and how to design models that can survive sudden changes. The outcome is a clearer roadmap for the future: 
+        leaner operations, digital-ready services, and brands that can travel beyond borders.
+      </p>
     </div>
   </section>
 
