--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </p>
 
         <div class="hero-badges">
-          <div class="hero-badge">Sole Partnership (Mo2asaseh)</div>
+          <div class="hero-badge">Sole Partnership</div>
           <div class="hero-badge">Founded 2013 · Beirut</div>
           <div class="hero-badge">Multi-venture history</div>
         </div>
