--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           <div class="card-meta">Key Facts</div>
           <h3 class="card-title">Prestige World Wide at a Glance</h3>
           <p class="card-text">
-            • Legal form: Sole Partnership (Mo2asaseh)<br>
+            • Legal form: Sole Partnership<br>
             • Founded: 2013 · Lebanon<br>
             • Sectors: Retail, services, e-commerce, apparel<br>
             • Current focus: Digital brands & online ventures
